# Stock-AI-Agent

./: .env.example  .gitignore  .vercelignore  DEPLOY_VERCEL.md  FREE_DEPLOYMENT.md  QUICK_START.md  README.md  _write_app.py  _write_icons.py  deploy_frontend.py  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements-agent.txt  requirements.txt  vercel.json
.github/workflows/: ai-agent.yml
api/: index.py
docs/: CLOUD_DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  main.jsx
scripts/: deploy.py  deploy_vercel.py
services/ai-agent/: Dockerfile  autonomous_agent.py
services/api-gateway/: Dockerfile  auth.py  main.py  websocket_manager.py
services/data-ingestion/: __init__.py
services/data-ingestion/aggregator/: price_aggregator.py
services/data-ingestion/collectors/: __init__.py  alpha_vantage_collector.py  yahoo_collector.py
services/data_ingestion/aggregator/: hello.txt
services/recommendation/engine/: capital_aware_engine.py
shared/config/: settings.py
shared/models/: db_models.py  financial_models.py
