[tool.poetry]
name = "asx-ai-investment-platform"
version = "1.0.0"
description = "Enterprise AI-powered investment advisor for ASX stocks"
authors = ["Your Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.4"
kafka-python = "^2.0.2"

# Data Collection
yfinance = "^0.2.35"
requests = "^2.31.0"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.2"
selenium = "^4.16.0"
pandas = "^2.1.4"
numpy = "^1.26.3"

# ML & AI
torch = "^2.1.2"
tensorflow = "^2.15.0"
scikit-learn = "^1.4.0"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
statsmodels = "^0.14.1"
prophet = "^1.1.5"
transformers = "^4.36.2"
sentence-transformers = "^2.2.2"

# Financial Analysis
ta-lib = "^0.4.28"
pandas-ta = "^0.3.14b"
mplfinance = "^0.12.10b0"
quantlib = "^1.32"

# NLP & Sentiment
nltk = "^3.8.1"
spacy = "^3.7.2"
textblob = "^0.17.1"
vaderSentiment = "^3.3.2"

# Monitoring & Logging
prometheus-client = "^0.19.0"
python-json-logger = "^2.0.7"
loguru = "^0.7.2"

# Utils
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
schedule = "^1.2.0"
pytz = "^2023.3"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
